kubernetes/apps/sgc/dns/records/alpha-site.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  name: alpha-site-dockge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  type: ExternalName
  externalName: "${DOCKGE_DOMAIN}"
  externalIPs:
    - "${DOCKGE_IP}"
  ports:
    - name: adguard
      port: 4000
      targetPort: 4000
    - name: zwave
      port: 8091
      targetPort: 8091
    - name: zigbee
      port: 8080
      targetPort: 8080
    - name: netbootxyz
      port: 1234
      targetPort: 1234
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-site-dockge
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.middlewares: network-authenticated-user@kubernetescrd
spec:
  ingressClassName: internal
  rules:
    - host: "adguard.${ROOT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpha-site-dockge
                port:
                  name: adguard
    - host: "netbootxyz.${ROOT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpha-site-dockge
                port:
                  name: netbootxyz
    - host: "zwave.${ROOT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpha-site-dockge
                port:
                  name: zwave
    - host: "zigbee.${ROOT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpha-site-dockge
                port:
                  name: zigbee
