kubernetes/apps/sgc/dns/records/thorax.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  name: thorax
spec:
  type: ExternalName
  externalName: "${THORAX_DOMAIN}"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thorax
  annotations:
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    kubernetes.io/ingress.class: internal
spec:
  routes:
    - match: Host(`${THORAX_HOST}/`)
      kind: Rule
      services:
        - name: thorax
          port: 8006
          passHostHeader: true
          scheme: https
          serversTransport: proxmox
