kubernetes/apps/sgc/dns/records/twilight-sparkle.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  name: twilight-sparkle
spec:
  type: ExternalName
  externalName: "${TWILIGHT_SPARKLE_DOMAIN}"
  externalIPs:
    - "${TWILIGHT_SPARKLE_IP}"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: twilight-sparkle
spec:
  routes:
    - match: Host(`${TWILIGHT_SPARKLE_DOMAIN}`)
      kind: Rule
      services:
        - name: twilight-sparkle
          port: 8006
